fix gap with connect button

--- a/src/App/components/PageHeader/PageHeader.module.css
+++ b/src/App/components/PageHeader/PageHeader.module.css
@@ -123,6 +123,8 @@
     display: flex;
     align-items: center;
     padding: 0 1rem;
+    gap: 8px;
+  
 }
 
 .authenticate_button {
@@ -137,7 +139,7 @@
 
     border-radius: var(--border-radius);
     width: 155px;
-    height: 25px;
+    height: 31px;
     transition: box-shadow var(--animation-speed) ease-in-out;
 }
 
